# tha-google-runner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tha_google_runner/: __init__.py  auth.py  cli.py  docs.py  drive.py  errors.py  gmail.py  sheets.py  slides.py
tests/: test_docs.py  test_drive.py  test_gmail.py  test_sheets.py  test_slides.py
